5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2517.log
== TEST (2019-05-09 11:44:54) 
-- CODE:
h = float(input())
i = 0

while h>0:
	h -= 0.5*9.8*i**2
	i+=1
	print("t = ",i)
	print("h = ",h)
-- OUTPUT:
t =  1
h =  36.0
t =  2
h =  31.1
t =  3
h =  11.5
t =  4
h =  -32.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:14) 
-- CODE:
h = float(input())
i = 0

while h>0:
	h -= 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",h)
	i+=1
-- OUTPUT:
t =  0
h =  36.0
t =  1
h =  31.1
t =  2
h =  11.5
t =  3
h =  -32.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:45:57) 
-- CODE:
h = float(input())
i = 0

while h>0:
	hf = h 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",hf)
	i+=1
-- ERROR:
File "XXXX", line 5
    hf = h 0.5*9.8*i**2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:06) 
-- CODE:
h = float(input())
i = 0

while h>0:
	hf = h - 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",hf)
	i+=1
-- OUTPUT:
t =  0
h =  36.0
t =  1
h =  31.1
t =  2
h =  16.4
t =  3
h =  -8.100000000000001
t =  4
h =  -42.400000000000006
t =  5
h =  -86.50000000000001
t =  6
h =  -140.4
t =  7
h =  -204.10000000000002
t =  8
h =  -277.6
t =  9
h =  -360.90000000000003
t =  10
h =  -454.00000000000006
t =  11
h =  -556.9000000000001
t =  12
h =  -669.6
t =  13
h =  -792.1
t =  14
h =  -924.4000000000001
t =  15
h =  -1066.5
t =  16
h =  -1218.4
t =  17
h =  -1380.1000000000001
t =  18
h =  -1551.6000000000001
t =  19
h =  -1732.9
t =  20
h =  -1924.0000000000002
t =  21
h =  -2124.9
t =  22
h =  -2335.6000000000004
t =  23
h =  -2556.1000000000004
t =  24
h =  -2786.4
t =  25
h =  -3026.5
t =  26
h =  -3276.4
t =  27
h =  -3536.1000000000004
t =  28
h =  -3805.6000000000004
t =  29
h =  -4084.9000000000005
t =  30
h =  -4374.0
t =  31
h =  -4672.900000000001
t =  32
h =  -4981.6
t =  33
h =  -5300.1
t =  34
h =  -5628.400000000001
t =  35
h =  -5966.5
t =  36
h =  -6314.400000000001
t =  37
h =  -6672.1
t =
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:35) 
-- CODE:
h = float(input())
i = 0

while hf>0:
	hf = h - 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",hf)
	i+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while hf>0:
NameError: name 'hf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:47:02) 
-- CODE:
h = hf = float(input())
i = 0
while hf>0:
	hf = h - 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",hf)
	i+=1
-- OUTPUT:
t =  0
h =  36.0
t =  1
h =  31.1
t =  2
h =  16.4
t =  3
h =  -8.100000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:48:36) 
-- CODE:
h = hf = float(input())
i = 0
while h - 0.5*9.8*i**2>0:
	hf = h - 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",round(hf,1))
	i+=1
-- OUTPUT:
t =  0
h =  36.0
t =  1
h =  31.1
t =  2
h =  16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:48:43) 
-- CODE:
h = hf = float(input())
i = 0
while h - 0.5*9.8*i**2>0:
	hf = h - 0.5*9.8*i**2
	print("t = ",i)
	print("h = ",round(hf,1))
	i+=1
-- EXECUTION TIME:
0.221016
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t =  0
h =  36.0
t =  1
h =  31.1
t =  2
h =  16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t =  0
h =  11.5
t =  1
h =  6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t =  0
h =  1234.5
t =  1
h =  1229.6
t =  2
h =  1214.9
t =  3
h =  1190.4
t =  4
h =  1156.1
t =  5
h =  1112.0
t =  6
h =  1058.1
t =  7
h =  994.4
t =  8
h =  920.9
t =  9
h =  837.6
t =  10
h =  744.5
t =  11
h =  641.6
t =  12
h =  528.9
t =  13
h =  406.4
t =  14
h =  274.1
t =  15
h =  132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
